--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<body>
-<h1>Demo</h1>
-<div id="output"></div>
-<script>
 
-  function demoBattery () {
+<body>
+
+<h1>Demo</h1>
+<button id="button">Click me</button>
+<div id="output"></div>
+
+<script>
+  const output = document.getElementById('output')
+  const button = document.getElementById('button')
+
+  function demoBattery() {
     navigator.getBattery()
         .then((battery) => {
           console.log('battery:')
@@ -21,64 +27,70 @@
         })
 
     function onlevelchange(battery) {
-      console.log('Battery status: ' + battery.level * 100 + ' %');
+      console.log('Battery status: ' + battery.level * 100 + ' %')
     }
 
     function onchargingchange(battery) {
       if (battery.charging) {
-        console.log("Battery is charging");
+        console.log("Battery is charging")
       }
     }
   }
 
-  function demoGeoLocation () {
+  function demoGeoLocation() {
     if ("geolocation" in navigator) {
       /* geolocalización disponible */
-      console.log('Loading...')
+      console.log('Loading position...')
       navigator.geolocation.getCurrentPosition(position => {
         console.log('Position:')
         console.log(position.coords)
 
-        const latitude  = position.coords.latitude
+        const latitude = position.coords.latitude
         const longitude = position.coords.longitude
 
-        output.innerHTML = '<p>Latitude is ' + latitude + '° <br>Longitude is ' + longitude + '°</p>';
+        output.innerHTML = '<p>Latitude is ' + latitude + '° <br>Longitude is ' + longitude + '°</p>'
 
         const url = `https://api.opencagedata.com/geocode/v1/json?q=${latitude}+${longitude}&key=8e456d1b8c004a1384e71d9a6c97e94f`
 
         fetch(url)
-          .then(response => response.json())
-          .then((res) => {
-            console.log('External · Geo API:')
-            console.log(res.results[0].formatted)
-            console.log(res.results[0].components)
-            // console.log(res.results[0].components.country)
-            // console.log(res.results[0].components.state)
-            // console.log(res.results[0].components.county)
-            // console.log(res.results[0].components.city)
-          })
+            .then(response => response.json())
+            .then((res) => {
+              console.log('External · Geo API:')
+              console.log(res.results[0].formatted)
+              console.log(res.results[0].components)
+              // console.log(res.results[0].components.country)
+              // console.log(res.results[0].components.state)
+              // console.log(res.results[0].components.county)
+              // console.log(res.results[0].components.city)
+            })
 
-      }, error => console.error(error));
+      }, error => console.error(error))
     } else {
       console.log('GEO no disponible')
       /* geolocalización NO disponible */
     }
   }
 
-  function demoVibration () {
+  function demoVibration() {
+    output.innerHTML = '<p>!!!</p>'
     // if (!('vibrate' in navigator) && ('ontouchstart' in window)) {
-    //   console.log('Esto no va a vibrar...')
     //   return false
     // }
-    navigator.vibrate = navigator.vibrate || navigator.webkitVibrate || navigator.mozVibrate || navigator.msVibrate;
-    navigator.vibrate([200, 100, 200, 100, 200, 100, 200]);
-    navigator.vibrate(400);
-
+    if ('vibrate' in navigator) {
+      output.innerHTML = '<p>Vamos a vibrar...</p>'
+      navigator.vibrate = navigator.vibrate || navigator.webkitVibrate || navigator.mozVibrate || navigator.msVibrate
+      navigator.vibrate([200, 100, 200, 100, 200, 100, 200])
+      navigator.vibrate(400)
+    }
   }
 
   // demoBattery()
   // demoGeoLocation()
-  demoVibration()
+  // demoVibration()
+
+  button.addEventListener('click', demoVibration)
+
+
 </script>
 
 </body>
