--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   // demoBattery()
   // demoGeoLocation()
   // button.addEventListener('click', demoVibration)
-  // button.addEventListener('click', demoBluetooth)
+  button.addEventListener('click', demoBluetooth)
 
 
 </script>
