--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
   // button.addEventListener('click', demoBluetooth)
   // button.addEventListener('click', demoAudio)
   // button.addEventListener('click', demoNotifications)
+  button.addEventListener('click', demoShare)
 
 </script>
 
