--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
         text: 'Hey, look at this awesome twitter guy! 🙊',
         url: 'https://twitter.com/baumannzone',
       })
+    } else {
+      output.innerHTML = '<p>You can\'t share!</p>'
     }
   }
 
