--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <!--  <input type="password" name="password" id="password" autocomplete="current-password"/>-->
 <!--</form>-->
 
-<button id="button">Click me</button>
+<!--<button id="button">Click me</button>-->
 
-<div id="output"></div>
+<!--<div id="output"></div>-->
 
 <div class="garden">
   <div class="ball"></div>
