--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 
 <!--<div id="output"></div>-->
 
-<div class="garden">
-  <div class="ball"></div>
-</div>
-
-<pre class="result"></pre>
+<!--<div class="orientation">-->
+<!--  <div class="garden">-->
+<!--    <div class="ball"></div>-->
+<!--  </div>-->
+<!--  <pre class="result"></pre>-->
+<!--</div>-->
 
 <script>
   const output = document.getElementById('output')
@@ -319,7 +320,7 @@
   // button.addEventListener('click', demoShare)
   // button.addEventListener('click', demoCredentials)
   // button.addEventListener('click', demoOrientation)
-  window.addEventListener('deviceorientation', handleOrientation)
+  // window.addEventListener('deviceorientation', handleOrientation)
 
 </script>
 
